--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,5 +1,24 @@
 body {
   margin: 0;
-  background-color: #1d1d20;
+  background-color: #1B1D24;
   color: white;
+}
+
+/* For WebKit browsers */
+::-webkit-scrollbar {
+  width: 2px;
+}
+
+::-webkit-scrollbar-track {
+  background-color: transparent;
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: rgb(106, 106, 106);
+  border-radius: 10px;
+}
+/* For Firefox */
+* {
+  scrollbar-color: transparent;
+  scrollbar-width: thin;
 }
