--- a/frontend/src/Components/Chat/ChatInfo.css
+++ b/frontend/src/Components/Chat/ChatInfo.css
@@ -38,22 +38,22 @@ h3 {
   margin: 2px;
   padding: 2px;
 }
-.groupChatInfo{
-    width: 100%;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+.groupChatInfo {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 .groupChatMembers {
   width: 100%;
   overflow: auto;
   height: 50vh;
 }
-.groupChatMembers>p {
-    margin: 15px 0 0 0 ;
-    padding: 10px;
-    font-size: 18px;
-    text-align: center;
+.groupChatMembers > p {
+  margin: 15px 0 0 0;
+  padding: 10px;
+  font-size: 18px;
+  text-align: center;
 }
 .member {
   display: flex;
@@ -67,6 +67,17 @@ h3 {
   height: 50px;
   margin: 2px 10px;
 }
-.member > div>p{
-    margin: 0;
+.member > div > p {
+  font-size: 16px;
+  position: relative;
+  margin: 0;
+}
+
+#admin {
+  background: #008ecf;
+  position: absolute;
+  margin: 0 8px;
+  font-size: 12px;
+  border-radius: 4px;
+  padding: 0 4px;
 }
