--- a/frontend/src/Components/Chat/Chats.css
+++ b/frontend/src/Components/Chat/Chats.css
@@ -2,6 +2,9 @@ i {
   cursor: pointer;
 }
 
+.blueIcon{
+  color: #008ecf;
+}
 .chatsOuterContainer {
   height: 100vh;
   position: relative;
@@ -41,6 +44,9 @@ h3 {
   width: 45px;
   height: 45px;
   border-radius: 50%;
+}
+.myProfile > img:hover {
+  cursor: pointer;
 }
 .sideMenu > i {
   padding: 10px 10px;
@@ -173,7 +179,7 @@ h3 {
   margin: 5px 10px;
   transition: 0.5s all;
 }
-.resultUser:hover{
+.resultUser:hover {
   background-color: #008ecf;
   cursor: pointer;
 }
