--- a/frontend/src/Components/ProfileMenu/OverlayMenu.css
+++ b/frontend/src/Components/ProfileMenu/OverlayMenu.css
@@ -154,7 +154,14 @@
   box-shadow: 3px 3px 10px rgba(0, 0, 0, 1),
     -1px -1px 6px rgba(255, 255, 255, 0.4);
 }
-
+.input::file-selector-button {
+  margin: 11px 0 0 0;
+  color: dodgerblue;
+  border-radius: 5px;
+}
+.input::file-selector-button:hover {
+  cursor: pointer;
+}
 .input:focus {
   border: 1px solid #008ecf;
   color: #fff;
