--- a/frontend/src/Components/Chat/Chat.css
+++ b/frontend/src/Components/Chat/Chat.css
@@ -45,3 +45,10 @@
 .selected {
   background: #008ecf;
 }
+.chatInfoWrapper {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  border: 2px solid red;
+  width: 20%;
+}
