--- a/frontend/src/Components/Chat/ChatInfo.css
+++ b/frontend/src/Components/Chat/ChatInfo.css
@@ -46,7 +46,7 @@ h3 {
 }
 .groupChatMembers {
   width: 100%;
-  overflow: auto;
+  overflow-y: auto;
   height: 50vh;
 }
 .groupChatMembers > p {
@@ -56,10 +56,17 @@ h3 {
   text-align: center;
 }
 .member {
+  position: relative;
   display: flex;
   flex-direction: row;
   align-items: center;
   padding: 10px;
+}
+.member > i {
+  position: absolute;
+  right: 10px;
+  font-size: 20px;
+  z-index: 10;
 }
 .member > img {
   border-radius: 50%;
@@ -71,6 +78,8 @@ h3 {
   font-size: 16px;
   position: relative;
   margin: 0;
+  max-width: 226px;
+  word-wrap: break-word;
 }
 
 #admin {
@@ -80,4 +89,10 @@ h3 {
   font-size: 12px;
   border-radius: 4px;
   padding: 0 4px;
+}
+.groupButtons{
+  display: flex;
+}
+.groupButtons>button{
+  margin: 2px 10px;
 }
