--- a/frontend/src/Components/Modal/AddUserModal.css
+++ b/frontend/src/Components/Modal/AddUserModal.css
@@ -38,6 +38,17 @@
   height: inherit;
   overflow-y: auto;
 }
+.selectedUsers > div:first-child {
+  justify-content: center;
+}
+.createGroupForm {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.createGroupForm > input {
+  margin: 10px 0;
+}
 .selectedUsers > div {
   margin: 5px 2px;
 }
@@ -51,4 +62,14 @@
   bottom: 2px;
   z-index: 10;
   right: 0;
+}
+.createBtn {
+  position: absolute;
+  bottom: 0;
+  border: 2px solid red;
+}
+
+.textAlign {
+  margin: 0;
+  text-align: center;
 }
