--- a/frontend/src/Components/Chat/ChatInfo.css
+++ b/frontend/src/Components/Chat/ChatInfo.css
@@ -1,15 +1,28 @@
+.chatInfoWrapperOuter {
+  position: absolute;
+  width: 350px;
+  right: 0;
+  height: 100%;
+  background-color: #1b1d24;
+  border: 1px solid #008ecf;
+  border-radius: 2px;
+  z-index: 20;
+  transition: all 0.3s;
+  transform: translateX(100%);
+  overflow-y: auto;
+}
 .chatInfoContainer {
   position: relative;
   display: flex;
   flex-direction: column;
   align-items: center;
-  width: 20%;
+  width: 100%;
 }
 .chatInfoContainer > i {
   position: absolute;
   top: 26px;
   right: 10px;
-  font-size: 20px;
+  font-size: 25px;
 }
 .chatUserInfo {
   width: 100%;
@@ -78,8 +91,8 @@ h3 {
   font-size: 16px;
   position: relative;
   margin: 0;
-  max-width: 226px;
-  word-wrap: break-word;
+  max-width: 200px;
+  overflow-wrap: anywhere;
 }
 
 #admin {
@@ -90,9 +103,36 @@ h3 {
   border-radius: 4px;
   padding: 0 4px;
 }
-.groupButtons{
+.groupButtons {
   display: flex;
+  justify-content: center;
+  margin: 10px;
 }
-.groupButtons>button{
+.groupButtons > button {
   margin: 2px 10px;
+}
+.chatInfoActive {
+  transform: translateX(0%);
+}
+@media screen and (max-width: 1150px) {
+  .member > div > p {
+    font-size: 14px;
+  }
+}
+@media screen and (max-width: 700px) {
+  .chatInfoWrapperOuter {
+    width: 100% !important;
+    border: none;
+  }
+  .groupChatMembers {
+    height: 40vh;
+  }
+  .groupButtons > button {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    width: 40%;
+    height: 40px;
+  }
 }
