--- a/frontend/src/Components/Chat/ChatRoom.css
+++ b/frontend/src/Components/Chat/ChatRoom.css
@@ -6,7 +6,7 @@
   border-bottom: 1px solid #26282e;
   height: 75px;
 }
-.chatHeader > i {
+.chatHeader > i:last-child {
   position: absolute;
   right: 10px;
   font-size: 20px;
@@ -47,11 +47,10 @@
 }
 .msgContent > p {
   display: flex;
-  border-radius: 10px;
+  border-radius: 20px;
   padding: 15px;
   overflow-wrap: break-word;
   position: relative;
-  /* min-width: 20rem; */
 }
 .sendMessageBox {
   position: absolute;
@@ -64,6 +63,7 @@
   height: 60px;
   height: 80px;
   border-top: 2px solid #26282e;
+  background-color: #1b1d24;
 }
 
 .sendMessageBoxInner {
@@ -105,9 +105,11 @@
 }
 .userMessages {
   background-color: rgb(155, 72, 212);
+  border-bottom-right-radius: 2px !important;
 }
 .senderMessages {
   background: #008ecf;
+  border-bottom-left-radius: 2px !important;
 }
 
 #senderUserName {
@@ -115,4 +117,31 @@
   position: absolute;
   bottom: -18px;
   left: 0;
+}
+.backArrow {
+  margin: 0 10px;
+  display: none;
+}
+
+@media screen and (max-width: 1150px) {
+  .startChatting {
+    max-width: 65%;
+  }
+  .chatRoom {
+    max-width: 65%;
+  }
+}
+@media screen and (max-width: 700px) {
+  .backArrow {
+    display: block;
+  }
+  .chatRoomInner {
+    padding: 0; 
+  }
+  .flexEnd {
+    margin-right: 4px;
+  }
+  .chatRoomInner{
+   height: 75vh; 
+  }
 }
