--- a/frontend/src/Components/Modal/AddUserModal.css
+++ b/frontend/src/Components/Modal/AddUserModal.css
@@ -1,9 +1,3 @@
-.addUserModal {
-  width: 35vw !important;
-  height: 50vh;
-  position: relative;
-}
-
 .searchBarContainer {
   width: 100%;
   height: 100%;
@@ -71,4 +65,23 @@
 .textAlign {
   margin: 0;
   text-align: center;
+}
+
+@media screen and (max-width: 700px) {
+  .groupChatModal {
+    height: 650px;
+  }
+  .searchWrapper {
+    flex-direction: column;
+    height: 80%;
+  }
+  .resultingUsers {
+    width: 100%;
+    border-right: none;
+    border-bottom: 1px solid #26282e;
+  }
+  .selectedUsers {
+    margin-top: 4px;
+    width: 100%;
+  }
 }
